Improve wave effects for notifications